Fixing minor bugs, this commit works with my hardware

--- a/exsettings.json
+++ b/exsettings.json
@@ -2,23 +2,64 @@
   "setup": {
     "type": "relative",
     "log_file": ".\\log\\log",
-    "timeout": 10
+    "timeout": 10,
+    "baudrate": 300,
+    "com": "COM9"
   },
   "timeline": [
     {
       "action": "write",
-      "message": 17,
-      "delay_ms": 0
+      "message": 1,
+      "delay_ms": 0,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 2,
+      "delay_ms": 50,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 3,
+      "delay_ms": 50,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 4,
+      "delay_ms": 50,
+      "cs": 1
     },
     {
       "action": "read",
-      "message": 33,
-      "delay_ms": 500
+      "message": 5,
+      "delay_ms": 70,
+      "cs": 1
     },
     {
-      "action": "read",
+      "action": "write",
       "message": 11,
-      "delay_ms": 700
+      "delay_ms": 50,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 12,
+      "delay_ms": 50,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 13,
+      "delay_ms": 50,
+      "cs": 1
+    },
+    {
+      "action": "write",
+      "message": 14,
+      "delay_ms": 50,
+      "cs": 1
     }
   ]
 }
