--- a/exsettings.json
+++ b/exsettings.json
@@ -4,7 +4,7 @@
     "log_file": ".\\log\\log",
     "timeout": 10,
     "baudrate": 300,
-    "com": "COM9"
+    "com": "COM8"
   },
   "timeline": [
     {
@@ -13,52 +13,10 @@
       "delay_ms": 0,
       "cs": 1
     },
-    {
-      "action": "write",
-      "message": 2,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 3,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 4,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
+	    {
       "action": "read",
-      "message": 5,
-      "delay_ms": 70,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 11,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 12,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 13,
-      "delay_ms": 50,
-      "cs": 1
-    },
-    {
-      "action": "write",
-      "message": 14,
-      "delay_ms": 50,
+      "message": "None",
+      "delay_ms": 200,
       "cs": 1
     }
   ]
